2008-10-01  Tor Lillqvist  <tml@novell.com>

	* io-icns.c: Don't #define _GNU_SOURCE on Windows as it confuses
	newest mingw headers.

2008-09-23 13:28:23  Tim Janik  <timj@imendio.com>

	* gdk-pixdata.c: prevent RLE encoding of 1x1 pixel images, since the
	encoder comparison operator requires at least 2 pixels, fixes #553374:
	Bug 553374 - gdk_pixdata_from_pixbuf fails for some images with use_rle set to TRUE

2008-09-19  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-io.c: Don't call fill_info if we've already filled
	the info from the module file, fixes a small memory leak.

2008-09-18  Dominic Lachowicz  <domlachowicz@gmail.com>

	* io-gdip-utils.c: Fix 2 cases where we leaked a GpImage (#552545)

2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.2 ===

2008-09-13  Tor Lillqvist  <tml@novell.com>

	* gdk-pixbuf-io.c: Don't use the deprectated
	g_win32_get_package_installation_subdirectory(). Use
	g_win32_get_package_installation_directory_of_module()
	instead. Also, don't use the deprecated silly
	G_WIN32_DLLMAIN_FOR_DLL_NAME() macro, but an explicit minimal
	DllMain() that just saves the DLL handle.

2008-09-07  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-io.c (gdk_pixbuf_io_init): Plug a small memory
	leak in an error path.

2008-09-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 517233 – Calling gdk_pixbuf_loader_close causes "GError set over
	the top of a previous GError" warning

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_close): Don't overwrite
	errors. Reported by Andrey Tsyvarev

2008-09-05  Sebastien Bacher  <seb128@ubuntu.com>

	* gdk-pixbuf-io.c: (gdk_pixbuf_load_module_unlocked):
	bug 550969 - fix a typo which breaks the static build

2008-09-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.1 ===

2008-09-04  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-io.c: Fix a deadlock introduced in the previous
	commit.

	* gdk-pixbuf-loader.c: Fix the race condition here, too.
